Release 0.3
-----------
* add support for GET/POST/PATCH/DELETE/HEAD


Release 0.2
-----------
* improve subclasssing support
* add support for protected url
* raise error if response code > 299


Release 0.1
-----------
* Initial release