@@ -13,9 +13,13 @@ qa:
 	isort -rc src/ --check-only
 	check-manifest
 
+test:
+	coverage run --rcfile=tests/.coveragerc --source drf_api_checker -m pytest tests
+	coverage report --rcfile=tests/.coveragerc
+	coverage html --rcfile=tests/.coveragerc
 
 clean:
-	rm -fr ${BUILDDIR} dist *.egg-info .coverage coverage.xml .eggs *.sqlite
+	rm -fr ${BUILDDIR} dist src/*.egg-info .coverage coverage.xml .eggs *.sqlite
 	find src -name __pycache__ -o -name "*.py?" -o -name "*.orig" -prune | xargs rm -rf
 	find tests -name __pycache__ -o -name "*.py?" -o -name "*.orig" -prune | xargs rm -rf
 
