@@ -70,7 +70,7 @@ Using ApiCheckerMixin::
 
         def test_customer_detail(self):
             url = reverse("customer-detail", args=[self.get_fixture('customer').pk])
-            self.assertAPI(url)
+            self.assertGET(url)
 
 
 Using ApiCheckerBase metaclass
