@@ -20,8 +20,8 @@ known_standard_library=
 known_third_party=django
 known_first_party=demo
 
-known_concurrency=concurrency
-sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,CONCURRENCY,LOCALFOLDER
+known_drf_api_checker=drf_api_checker
+sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,DRF_API_CHECKER,LOCALFOLDER
 
 [flake8]
 max-complexity = 12
