@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-from rest_framework.generics import ListCreateAPIView, UpdateAPIView, RetrieveAPIView, DestroyAPIView
+from rest_framework.generics import ListCreateAPIView, UpdateAPIView, RetrieveAPIView, DestroyAPIView, CreateAPIView
 
 from .models import Master
 from .serializers import MasterSerializer
@@ -11,6 +11,11 @@ class MasterListAPIView(ListCreateAPIView):
 
 
 class MasterUpdateAPIView(UpdateAPIView):
+    serializer_class = MasterSerializer
+    queryset = Master.objects.all()
+
+
+class MasterCreatAPIView(CreateAPIView):
     serializer_class = MasterSerializer
     queryset = Master.objects.all()
 
