@@ -13,13 +13,14 @@ addopts =
       --pyargs drf_api_checker
       --doctest-modules
       -p no:warnings
+      -p no:cov
       --reuse-db
       --tb=short
       --capture=no
       --echo-version django
-      --cov=drf_api_checker
-      --cov-report=html
-      --cov-config=tests/.coveragerc
+;      --cov=drf_api_checker
+;      --cov-report=html
+;      --cov-config=tests/.coveragerc
 
 pep8ignore = * ALL
 
@@ -38,4 +39,4 @@ deps=
     -rsrc/requirements/testing.pip
 
 commands =
-    {posargs:py.test tests --create-db}
+    {posargs:coverage run --rcfile=tests/.coveragerc --source drf_api_checker -m pytest tests --create-db}
